--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 <script src="semantic/dist/semantic.min.js"></script>
 
+<div class="ui green segment">
+  <div class="ui inverted secondary menu">
+    <a class="active item">
+      Home
+    </a>
+    <a class="item">
+      Messages
+    </a>
+    <a class="item">
+      Friends
+    </a>
+  </div>
+</div>
+
 <h1>Leef Browser</h1>
