--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 <script src="semantic/dist/semantic.min.js"></script>
 
-<div class="ui green segment">
+<div class="ui segment">
   <div class="ui inverted secondary menu">
     <a class="active item">
       Home
@@ -13,6 +13,15 @@
       Friends
     </a>
   </div>
+</div>
+
+<div class="ui stackable menu">
+  <div class="item">
+    <img src="/images/logo.png">
+  </div>
+  <a class="item">Features</a>
+  <a class="item">Testimonials</a>
+  <a class="item">Sign-in</a>
 </div>
 
 <h1>Leef Browser</h1>
