--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
   <a class="item">Sign-in</a>
 </div>
 
-<h1>Leef Browser</h1>
+<div class="ui center aligned container">
+  <div class="ui huge header">Leef Browser</div>
+  <div class="ui medium header">Leef Browser</div>
+</div>
