--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 
 <div class="ui center aligned container">
   <div class="ui huge header">Leef Browser</div>
-  <div class="ui medium header">Leef Browser</div>
+  <h3>A fast, light-weight, and open-source web browser.</h3>
 </div>
+
+<a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on GitHub</a>
+<a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a>
+<a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
