--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <h3>A fast, light-weight, and open-source web browser.</h3>
 </div>
 
-<a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on GitHub</a>
+<div class="ui segment">
+  <button class="ui inverted green button"><a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on <i class="github icon"></i></a></button>
+  <button class="ui inverted green button"><a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a></button>
+  <button class="ui inverted green button"><a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a></button>
+</div>
+
+<a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on <i class="github icon"></i></a>
 <a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a>
 <a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
