--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
-<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-<script src="semantic/dist/semantic.min.js"></script>
+<!DOCTYPE html>
+<html>
 
-<div class="ui stackable menu">
-  <div class="item">
-    <img src="/images/logo.png">
-  </div>
-  <a class="item">Features</a>
-  <a class="item">Testimonials</a>
-  <a class="item">Sign-in</a>
-</div>
+  <head>
+    <meta charset="utf-8">
+    <title>Leef Browser</title>
 
-<div class="ui center aligned container">
-  <div class="ui huge header">Leef Browser</div>
-  <h3>A fast, light-weight, and open-source web browser.</h3>
-</div>
+    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+    <script src="semantic/dist/semantic.min.js"></script>
+  </head>
 
-<div class="ui segment">
-  <button class="ui inverted green button"><a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on <i class="github icon"></i></a></button>
-  <button class="ui inverted green button"><a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a></button>
-  <button class="ui inverted green button"><a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a></button>
-</div>
+  <style>
 
-<a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on <i class="github icon"></i></a>
-<a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a>
-<a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
+  </style>
+
+  <body>
+
+    <div class="ui stackable menu">
+      <div class="item">
+        <img src="/images/logo.png">
+      </div>
+      <a class="item">Features</a>
+      <a class="item">Testimonials</a>
+      <a class="item">Sign-in</a>
+    </div>
+
+    <div class="ui center aligned text container">
+      <h1>Leef Browser</h1>
+    </div>
+    <div class="ui center aligned text container">
+      <h3>A fast, light-weight, and open-source web browser.</h3>
+    </div>
+
+    <div class="ui center aligned container">
+      <a href="https://github.com/mAzurkovic/leef-browser" style="color: white" class="ui green button">View on <i class="github icon"></i></a>
+      <a href="https://github.com/mAzurkovic/leef-browser/zipball/master" style="color: white" class="ui green button">Download .zip</a>
+      <a href="https://github.com/mAzurkovic/leef-browser/tarball/master" style="color: white" class="ui green button">Download .tar.gz</a>
+
+    </div>
+
+    <a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on <i class="github icon"></i></a>
+    <a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a>
+    <a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
+
+  </body>
+
+</html>
