--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a>
     <a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
 
+    <img src="ex1.png" style="width: 900px" />
+
   </body>
 
 </html>
