--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <div class="item">
         <img src="/images/logo.png">
       </div>
+      <a class="item">Home</a>
+      <a class="item">About</a>
+      <a class="item">News</a>
       <a class="item">Features</a>
-      <a class="item">Testimonials</a>
-      <a class="item">Sign-in</a>
     </div>
 
     <div class="ui center aligned text container">
