--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="ui stackable menu">
       <div class="item">
-        <img src="/images/logo.png">
+        <img src="leef_logo.png">
       </div>
       <a class="item">Home</a>
       <a class="item">About</a>
