--- a/index.html
+++ b/index.html
@@ -10,40 +10,68 @@
   </head>
 
   <style>
-
   </style>
 
   <body>
 
-    <div class="ui stackable menu">
-      <div class="item">
-        <img src="leef_logo.png">
-      </div>
-      <a class="item">Home</a>
-      <a class="item">About</a>
-      <a class="item">News</a>
-      <a class="item">Features</a>
+    <div class="ui six item stackable menu">
+    <div class="item">
+      <img href="/" src="leef_logo.png">
+    </div>
+    <a class="item">Home</a>
+    <a class="item">About</a>
+    <a class="item">News</a>
+    <a class="item">Features</a>
+    <a class="item" href="download_page.html"><b>Download</b></a>
     </div>
 
     <div class="ui center aligned text container">
-      <h1>Leef Browser</h1>
+      <div style="font-size: 50px;"><b>Leef</b> Browser</div>
     </div>
-    <div class="ui center aligned text container">
+    <div class="ui center aligned text container" style="padding-bottom: 10px;">
       <h3>A fast, light-weight, and open-source web browser.</h3>
     </div>
 
-    <div class="ui center aligned container">
-      <a href="https://github.com/mAzurkovic/leef-browser" style="color: white" class="ui green button">View on <i class="github icon"></i></a>
-      <a href="https://github.com/mAzurkovic/leef-browser/zipball/master" style="color: white" class="ui green button">Download .zip</a>
-      <a href="https://github.com/mAzurkovic/leef-browser/tarball/master" style="color: white" class="ui green button">Download .tar.gz</a>
-
+    <div class="ui center aligned container" style="padding-bottom: 10px;">
+      <a href="https://github.com/mAzurkovic/leef-browser" style="color: white" class="ui green button">View on <i class="github icon" style="padding-left: 5px;"></i></a>
+      <a href="download_page.html" style="color: white" class="ui blue button">Download <i class="download icon" style="padding-left: 5px;"></i></a>
     </div>
 
+<!--
     <a href="https://github.com/mAzurkovic/SqeekChat" class="btn">View on <i class="github icon"></i></a>
     <a href="https://github.com/mAzurkovic/SqeekChat/zipball/master" class="btn">Download .zip</a>
     <a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
+-->
 
-    <img src="ex1.png" style="width: 900px" />
+  <div class="ui divider"></div>
+
+  <div class="ui center aligned container">
+
+    <h2 class="ui icon header">
+      <i class="lightning icon"></i>
+    <div class="content">
+        Lighting-Fast
+      <div class="sub header" style="width: 225px;">Utilizing the lastest in web technology, Leef is able to render web pages faster than ever!</div>
+    </div>
+    </h2>
+
+    <h2 class="ui icon header">
+      <i class="code icon"></i>
+    <div class="content">
+        Open-Source
+      <div class="sub header" style="width: 225px;">Interested in seeing how the software works? Then check out the source code your self!</div>
+    </div>
+    </h2>
+
+    <h2 class="ui icon header">
+      <i class="send icon"></i>
+    <div class="content">
+        Leight-Weight
+      <div class="sub header" style="width: 225px;">Leef isn't filled with useless features, however it still makes your browsing experiance great!</div>
+    </div>
+    </h2>
+
+  </div>
 
   </body>
 
