--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
     <div class="ui text container">
       <h1 class="ui inverted header">
+        <img src="images/leef_logo.png" style="width: 100px;" />
         Leef Browser
       </h1>
       <h2>A fast, light-weight, and open-source web browser.</h2>
@@ -166,20 +167,16 @@
 
   <div class="ui vertical stripe segment">
     <div class="ui middle aligned stackable grid container">
+
       <div class="row">
-        <div class="eight wide column">
+      <!--  <div class="four wide column">
           <h3 class="ui header">We Help Companies and Companions</h3>
           <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
           <h3 class="ui header">We Make Bananas That Can Dance</h3>
           <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
-        </div>
-        <div class="six wide right floated column">
-          <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
-        </div>
-      </div>
-      <div class="row">
-        <div class="center aligned column">
-          <a class="ui huge button">Check Them Out</a>
+        </div> -->
+        <div class="sixteen wide right floated column">
+          <img src="images/leef_GUI_1.png" class="ui rounded image">
         </div>
       </div>
     </div>
@@ -190,14 +187,31 @@
     <div class="ui equal width stackable internally celled grid">
       <div class="center aligned row">
         <div class="column">
-          <h3>"What a Company"</h3>
-          <p>That is what they all say about us</p>
+          <h2 class="ui icon header">
+            <i class="lightning icon"></i>
+          <div class="content">
+              Lighting-Fast
+            <div class="sub header">Utilizing the lastest in web technology, Leef is able to render web pages faster than ever!</div>
+          </div>
+          </h2>
         </div>
         <div class="column">
-          <h3>"I shouldn't have gone with their competitor."</h3>
-          <p>
-            <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
-          </p>
+          <h2 class="ui icon header">
+            <i class="code icon"></i>
+          <div class="content">
+              Open-Source
+            <div class="sub header">Interested in seeing how the software works? Then check out the source code your self!</div>
+          </div>
+          </h2>
+        </div>
+        <div class="column">
+          <h2 class="ui icon header">
+            <i class="send icon"></i>
+          <div class="content">
+              Leight-Weight
+            <div class="sub header">Leef isn't filled with useless features, however it still makes your browsing experiance great!</div>
+          </div>
+          </h2>
         </div>
       </div>
     </div>
@@ -297,35 +311,6 @@
     <a href="https://github.com/mAzurkovic/SqeekChat/tarball/master" class="btn">Download .tar.gz</a>
 -->
 
-  <div class="ui divider"></div>
-
-  <div class="ui center aligned container">
-
-    <h2 class="ui icon header">
-      <i class="lightning icon"></i>
-    <div class="content">
-        Lighting-Fast
-      <div class="sub header" style="width: 225px;">Utilizing the lastest in web technology, Leef is able to render web pages faster than ever!</div>
-    </div>
-    </h2>
-
-    <h2 class="ui icon header">
-      <i class="code icon"></i>
-    <div class="content">
-        Open-Source
-      <div class="sub header" style="width: 225px;">Interested in seeing how the software works? Then check out the source code your self!</div>
-    </div>
-    </h2>
-
-    <h2 class="ui icon header">
-      <i class="send icon"></i>
-    <div class="content">
-        Leight-Weight
-      <div class="sub header" style="width: 225px;">Leef isn't filled with useless features, however it still makes your browsing experiance great!</div>
-    </div>
-    </h2>
-
-  </div>
 
   </body>
 
