--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
   <div class="ui vertical stripe segment">
     <div class="ui text container">
-      <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
+      <h3 class="ui header">Webkit</h3>
       <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
       <a class="ui large button">Read More</a>
       <h4 class="ui horizontal header divider">
